# bot_assistant_web2

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
bot_assistant/: address_book_classes.py  bot_logic.py  main.py  notes_classes.py  sort.py  viewer.py
